fix: resolve CI/CD permission errors for vault directory creation
- Add TESTING environment check to skip directory creation in tests
- Configure pytest.ini with test environment variables
- Update CI workflow to use writable /tmp directories for tests
- Ensures tests can run without root permissions in CI environment

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,6 +81,10 @@ jobs:
         pip install -r requirements-dev.txt
         
     - name: Run tests with coverage
+      env:
+        TESTING: "true"
+        OBSIDIAN_VAULT_PATH: "/tmp/test-vault"
+        UPLOAD_DIR: "/tmp/test-uploads"
       run: |
         python -m pytest \
           --cov=app \
